@@ -1,2 +1,3 @@
 ## Added
 * Rutile ore, replacing titanium ore during world gen
+* Laid groundwork for salt based sodium production.
